# primes

./: ArgParser.h  Bitset.h  CMakeLists.txt  Event.h  README.md  Sieve.h  benchmark.sh  build.cmd  build.ps1  build.sh  build_environment_linux_arm.dockerfile  little_endian.h  naive.c  primes.py  run.py  run.sh  run_environment_linux_arm.dockerfile  run_environment_win_x64.dockerfile  runtime_comparison.md  segmented.cpp  sieve.cpp  undump
.github/workflows/: test.yaml
c/: CMakeLists.txt  naive.c  run.json
cpp/: CMakeLists.txt  Event.h  Sieve.h  build.ps1  build.sh  little_endian.h  run.json  segmented.cpp
pyopencl/: primes.py  run.json  run_env.ps1  run_env.sh
self-hosted-runner/: Dockerfile
